[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://screens/food.gd" type="Script" id=2]
[ext_resource path="res://images/food-atlas.png" type="Texture" id=3]

[sub_resource type="Gradient" id=18]
interpolation_mode = 1
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 0.501961 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 18 )
width = 360

[sub_resource type="DynamicFont" id=19]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 19 )

[sub_resource type="DynamicFont" id=20]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 20 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1.36422e-12, 1.36422e-12, 341, 341 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 341, 1.36422e-12, 341, 341 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 682, 1.36422e-12, 341, 341 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1.36422e-12, 341, 341, 341 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 341, 341, 341, 341 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 682, 341, 341, 341 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1.36422e-12, 682, 341, 341 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 341, 682, 341, 341 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 682, 682, 341, 341 )

[node name="FoodScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -413, -114 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.843137, 0.843137, 0.843137, 1 )

[node name="Back" type="Node2D" parent="."]

[node name="BackButton" type="TextureButton" parent="Back"]
margin_top = 548.0
margin_right = 360.0
margin_bottom = 640.0
texture_normal = SubResource( 6 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Back"]
margin_top = 557.0
margin_right = 360.0
margin_bottom = 637.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 0.47451, 0.47451, 0.47451, 1 )
text = "BACK"
align = 1

[node name="Title" type="Node2D" parent="."]

[node name="Border" type="ColorRect" parent="Title"]
margin_right = 360.0
margin_bottom = 96.0
color = Color( 0, 0, 0, 1 )

[node name="Background" type="ColorRect" parent="Title"]
margin_right = 360.0
margin_bottom = 92.0
color = Color( 0.47451, 0.47451, 0.47451, 1 )

[node name="Label" type="Label" parent="Title"]
margin_top = 12.0
margin_right = 360.0
margin_bottom = 92.0
theme = SubResource( 8 )
text = "FOOD"
align = 1

[node name="Buttons" type="Node2D" parent="."]
scale = Vector2( 0.333, 0.333 )

[node name="GridContainer" type="GridContainer" parent="Buttons"]
margin_left = 24.0
margin_top = 390.0
margin_right = 1055.0
margin_bottom = 1533.0
custom_constants/vseparation = 60
columns = 3

[node name="Button1" type="TextureButton" parent="Buttons/GridContainer"]
margin_right = 341.0
margin_bottom = 341.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 9 )

[node name="Button2" type="TextureButton" parent="Buttons/GridContainer"]
margin_left = 345.0
margin_right = 686.0
margin_bottom = 341.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 10 )

[node name="Button3" type="TextureButton" parent="Buttons/GridContainer"]
margin_left = 690.0
margin_right = 1031.0
margin_bottom = 341.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 11 )

[node name="Button4" type="TextureButton" parent="Buttons/GridContainer"]
margin_top = 401.0
margin_right = 341.0
margin_bottom = 742.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 12 )

[node name="Button5" type="TextureButton" parent="Buttons/GridContainer"]
margin_left = 345.0
margin_top = 401.0
margin_right = 686.0
margin_bottom = 742.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 13 )

[node name="Button6" type="TextureButton" parent="Buttons/GridContainer"]
margin_left = 690.0
margin_top = 401.0
margin_right = 1031.0
margin_bottom = 742.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 14 )

[node name="Button7" type="TextureButton" parent="Buttons/GridContainer"]
margin_top = 802.0
margin_right = 341.0
margin_bottom = 1143.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 15 )

[node name="Button8" type="TextureButton" parent="Buttons/GridContainer"]
margin_left = 345.0
margin_top = 802.0
margin_right = 686.0
margin_bottom = 1143.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 16 )

[node name="Button9" type="TextureButton" parent="Buttons/GridContainer"]
margin_left = 690.0
margin_top = 802.0
margin_right = 1031.0
margin_bottom = 1143.0
rect_pivot_offset = Vector2( -578, 172 )
size_flags_horizontal = 2
texture_normal = SubResource( 17 )
